fix: update minor
- fix CSS scrollbar
- bind initial filters
- fix CSS load more button
- fix responsive product list

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,20 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #bdc3c7;
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #3a384199;
+}
+
 .cbd-top-menu-expanded {
   @apply w-screen block text-center absolute top-[47px] left-0 bg-[#17161A];
 }
